
libfoamlib_ALDOR=\
	array.as	\
	basic.as	\
	boolean.as	\
	char.as		\
	file.as		\
	fname.as	\
	foamcat.as	\
	foamlib.as	\
	format.as	\
	gener.as	\
	lang.as		\
	langx.as	\
	list.as		\
	machine.as	\
	opsys.as	\
	oslow.as	\
	parray.as	\
	partial.as	\
	pointer.as	\
	segment.as	\
	sfloat.as	\
	sinteger.as	\
	string.as	\
	textwrit.as	\
	tuple.as	

noinst_LIBRARIES=libfoamlib.a

libfoamlib_a_SOURCES=$(libfoamlib_ALDOR)
