# These need to be in dependency order.
SUBDIRS =			\
	util			\
	numbers			\
	extree			\
	extree/operators	\
	extree/parser		\
	categories		\
	basic			\
	basic/compbug		\
	mat			\
	mat/gauss		\
	mat/modular		\
	mat/modular/compbug	\
	mat/linalg		\
	multpoly/multpolydata	\
	multpoly/exponent	\
	univpoly/categories	\
	mat/linalg2		\
	univpoly		\
	univpoly/gcd		\
	fraction		\
	series			\
	series/compbug		\
	mat/linalg3		\
	algext			\
	polyfactorp		\
	ffield			\
	polyfactor0		\
	test

# multpoly/multpolycat	\
#	  multpoly/multpolydom multpoly/multpolypkg			\
#	  multpoly/multpolytest


lib_LIBRARIES = libalgebra.a

libalgebra_a_SOURCES =				\
	algext/sit_algext.c			\
	algext/sit_sae.c			\
	algext/sit_saexcpt.c			\
	algext/sit_upmod.c			\
	basic/compbug/sit_interp.c		\
	basic/compbug/sit_shell.c		\
	basic/sit_complex.c			\
	basic/sit_indvar.c			\
	basic/sit_mkpring.c			\
	basic/sit_permut.c			\
	basic/sit_pring.c			\
	basic/sit_product.c			\
	categories/alg_cansimp.c		\
	categories/alg_ffield.c			\
	categories/alg_frering.c		\
	categories/alg_idxfrng.c		\
	categories/alg_modcmp.c			\
	categories/alg_primsrc.c		\
	categories/alg_rescls.c			\
	categories/alg_rring.c			\
	categories/sit_abgroup.c		\
	categories/sit_abmon.c			\
	categories/sit_algebra.c		\
	categories/sit_automor.c		\
	categories/sit_basic.c			\
	categories/sit_char0.c			\
	categories/sit_charp.c			\
	categories/sit_chrem.c			\
	categories/sit_comring.c		\
	categories/sit_dcmprng.c		\
	categories/sit_deriv.c			\
	categories/sit_diffext.c		\
	categories/sit_difring.c		\
	categories/sit_euclid.c			\
	categories/sit_field.c			\
	categories/sit_freealg.c		\
	categories/sit_freelar.c		\
	categories/sit_freelc.c			\
	categories/sit_freemod.c		\
	categories/sit_fset.c			\
	categories/sit_gcd.c			\
	categories/sit_gexpcat.c		\
	categories/sit_group.c			\
	categories/sit_idxfalg.c		\
	categories/sit_idxflar.c		\
	categories/sit_idxflc.c			\
	categories/sit_idxfmod.c		\
	categories/sit_intdom.c			\
	categories/sit_integer.c		\
	categories/sit_intgmp.c			\
	categories/sit_linarit.c		\
	categories/sit_module.c			\
	categories/sit_monoid.c			\
	categories/sit_ncid.c			\
	categories/sit_pable.c			\
	categories/sit_prfcat0.c		\
	categories/sit_ptools.c			\
	categories/sit_qring.c			\
	categories/sit_ring.c			\
	categories/sit_spf0.c			\
	categories/sit_spfcat0.c		\
	categories/sit_spzble.c			\
	extree/operators/sit_OPand.c		\
	extree/operators/sit_OPassgn.c		\
	extree/operators/sit_OPbigO.c		\
	extree/operators/sit_OPcase.c		\
	extree/operators/sit_OPcplex.c		\
	extree/operators/sit_OPequal.c		\
	extree/operators/sit_OPexpt.c		\
	extree/operators/sit_OPfact.c		\
	extree/operators/sit_OPif.c		\
	extree/operators/sit_OPless.c		\
	extree/operators/sit_OPlist.c		\
	extree/operators/sit_OPllist.c		\
	extree/operators/sit_OPmatrx.c		\
	extree/operators/sit_OPminus.c		\
	extree/operators/sit_OPmore.c		\
	extree/operators/sit_OPnoteq.c		\
	extree/operators/sit_OPplus.c		\
	extree/operators/sit_OPprefx.c		\
	extree/operators/sit_OPquot.c		\
	extree/operators/sit_OPsubsc.c		\
	extree/operators/sit_OPtimes.c		\
	extree/operators/sit_OPvect.c		\
	extree/parser/alg_tokens.c		\
	extree/parser/sit_infexpr.c		\
	extree/parser/sit_lspexpr.c		\
	extree/parser/sit_maple.c		\
	extree/parser/sit_parser.c		\
	extree/parser/sit_scanner.c		\
	extree/parser/sit_token.c		\
	extree/sit_extree.c			\
	extree/sit_optools.c			\
	ffield/alg_pf2.c			\
	ffield/sit_prfcat.c			\
	ffield/sit_spf.c			\
	ffield/sit_sprfcat.c			\
	ffield/sit_sprfgcd.c			\
	ffield/sit_sprfmat.c			\
	ffield/sit_zpf.c			\
	fraction/sit_lcqotct.c			\
	fraction/sit_matquot.c			\
	fraction/sit_qotbyc0.c			\
	fraction/sit_qotbyct.c			\
	fraction/sit_qotfcat.c			\
	fraction/sit_qotfct0.c			\
	fraction/sit_qotient.c			\
	fraction/sit_quotby.c			\
	fraction/sit_quotcat.c			\
	fraction/sit_uflgqot.c			\
	fraction/sit_vecquot.c			\
	mat/gauss/sit_dfge.c			\
	mat/gauss/sit_ff2ge.c			\
	mat/gauss/sit_ffge.c			\
	mat/gauss/sit_hermge.c			\
	mat/gauss/sit_linelim.c			\
	mat/gauss/sit_oge.c			\
	mat/linalg2/alg_ffupla.c		\
	mat/linalg2/sit_popov.c			\
	mat/linalg2/sit_upcrtla.c		\
	mat/linalg3/sit_hensela.c		\
	mat/linalg/sit_bsolve.c			\
	mat/linalg/sit_laring.c			\
	mat/linalg/sit_linalg.c			\
	mat/linalg/sit_overdet.c		\
	mat/modular/compbug/sit_speclin.c	\
	mat/modular/sit_modpoge.c		\
	mat/modular/sit_zcrtla.c		\
	mat/sit_dnsemat.c			\
	mat/sit_matcat.c			\
	mat/sit_vector.c			\
	multpoly/exponent/sm_dirprod.c		\
	multpoly/exponent/sm_dirprodc.c		\
	multpoly/exponent/sm_expocat.c		\
	multpoly/exponent/sm_fvt.c		\
	multpoly/exponent/sm_listovar.c		\
	multpoly/exponent/sm_midl.c		\
	multpoly/exponent/sm_midrl.c		\
	multpoly/exponent/sm_mievc.c		\
	multpoly/exponent/sm_milex.c		\
	multpoly/exponent/sm_osymbol.c		\
	multpoly/exponent/sm_tuplovar.c		\
	multpoly/exponent/sm_vt.c		\
	multpoly/exponent/sm_zevc.c		\
	multpoly/multpolydata/sm_delist.c	\
	numbers/sit_primes.c			\
	numbers/sit_primgen.c			\
	numbers/sit_prmroot.c			\
	numbers/sit_prmtabl.c			\
	numbers/sit_prmword.c			\
	polyfactor0/sit_fhensel.c		\
	polyfactor0/sit_zfactor.c		\
	polyfactor0/sit_zfring.c		\
	polyfactor0/sit_zfringg.c		\
	polyfactorp/sit_upfactp.c		\
	series/alg_serpoly.c			\
	series/compbug/sit_duts.c		\
	series/sit_seqence.c			\
	series/sit_sercat.c			\
	test/tst_assert.c			\
	test/tst_test.c				\
	test/tst_ring.c				\
	univpoly/alg_sup0.c			\
	univpoly/alg_sup1.c			\
	univpoly/alg_sup.c			\
	univpoly/alg_unitool.c			\
	univpoly/alg_uprcr.c			\
	univpoly/categories/alg_chrem2.c	\
	univpoly/categories/alg_modgcdp.c	\
	univpoly/categories/alg_polydio.c	\
	univpoly/categories/sit_fftring.c	\
	univpoly/categories/sit_fring.c		\
	univpoly/categories/sit_froot.c		\
	univpoly/categories/sit_resprs.c	\
	univpoly/categories/sit_sqfree.c	\
	univpoly/categories/sit_ufalg.c		\
	univpoly/categories/sit_uffalg.c	\
	univpoly/categories/sit_ugring.c	\
	univpoly/categories/sit_umonom.c	\
	univpoly/categories/sit_upolalg.c	\
	univpoly/categories/sit_upolc0.c	\
	univpoly/categories/sit_zring.c		\
	univpoly/gcd/sit_gcdint.c		\
	univpoly/gcd/sit_gcdintg.c		\
	univpoly/gcd/sit_heugcd.c		\
	univpoly/gcd/sit_modgcd.c		\
	univpoly/gcd/sit_modpgcd.c		\
	univpoly/sit_dup.c			\
	univpoly/sit_polkara.c			\
	univpoly/sit_spread.c			\
	univpoly/sit_ufacpol.c			\
	univpoly/sit_upolc.c			\
	util/alg_version.c


datalibdir = $(datadir)/lib
datalib_DATA = libalgebra.al

libraryname = algebra
include ../../buildlib.am
