libraries = axldem axllib

AXLTESTS =	\
	bug1089	\
	bug1168	\
	catdef2	\
	f21	\
	float2	\
	gbtest1	\
	hilbert1	\
	iroots	\
	scobind1	\
	type6	\
	#

BROKEN =	\
	intfact	\
	#

XFAIL_TESTS =	\
	bug1089/bug1089	\
	type6/type6	\
	#

check_PROGRAMS = # filled by Tests.am
CLEANFILES = # filled by Tests.am
TESTS = $(check_PROGRAMS)

include ../../testprog.am
