libraries = axllib

AXLTESTS =	\
	1test	\
	abcheck3	\
	array0	\
	array1	\
	arrepl1a	\
	arrepla	\
	assign1	\
	bigmand	\
	big	\
	binadd	\
	bug626	\
	bug696	\
	bug702	\
	bug715	\
	bug778	\
	bug798	\
	bug818	\
	bug821	\
	bug822	\
	bug823	\
	bug826	\
	bug835	\
	bug842	\
	bug848	\
	bug849	\
	bug867	\
	bug879	\
	bug885	\
	bug892	\
	bug897	\
	bug898	\
	bug901	\
	bug910	\
	bug911	\
	bug928	\
	bug932	\
	bug939	\
	bug940	\
	bug941	\
	bug944	\
	bug948	\
	bug954a	\
	bug954b	\
	bug954c	\
	bug954d	\
	bug954e	\
	bug954f	\
	bug958	\
	bug965	\
	bug966	\
	bug969	\
	bug993	\
	bug994	\
	bug1008	\
	bug1009	\
	bug1015	\
	bug1020	\
	bug1021	\
	bug1022	\
	bug1023	\
	bug1024	\
	bug1025	\
	bug1027	\
	bug1028	\
	bug1029	\
	bug1030	\
	bug1031	\
	bug1038	\
	bug1039	\
	bug1041	\
	bug1044	\
	bug1045	\
	bug1046	\
	bug1053	\
	bug1055	\
	bug1056	\
	bug1061	\
	bug1062	\
	bug1063	\
	bug1064	\
	bug1065	\
	bug1066	\
	bug1067	\
	bug1069	\
	bug1071	\
	bug1074	\
	bug1076	\
	bug1077	\
	bug1078	\
	bug1079	\
	bug1087	\
	bug1090	\
	bug1091	\
	bug1092	\
	bug1093	\
	bug1096	\
	bug1098	\
	bug1099	\
	bug1101	\
	bug1105	\
	bug1106	\
	bug1110	\
	bug1111	\
	bug1113	\
	bug1114	\
	bug1115	\
	bug1119	\
	bug1121	\
	bug1123	\
	bug1127	\
	bug1129	\
	bug1130	\
	bug1131	\
	bug1132	\
	bug1137	\
	bug1139	\
	bug1142	\
	bug1145	\
	bug1149	\
	bug1151	\
	bug1159	\
	bug1160	\
	bug1161	\
	bug1162	\
	bug1164	\
	bug1166	\
	bug1170	\
	bug1171	\
	bug1172	\
	bug1176	\
	bug1177	\
	bug1178	\
	bug1179	\
	bug1180	\
	bug1182	\
	bug1183	\
	bug1184	\
	bug1188	\
	bug1191	\
	bug1193	\
	bug1195	\
	bug1196	\
	bug1198	\
	bug1199	\
	bug1200	\
	bug1202	\
	bug1204	\
	bug1206	\
	bug1211	\
	bug1212	\
	bug1217	\
	bug1219	\
	bug1220	\
	bug1221	\
	bug1224	\
	bug1228	\
	bug1234	\
	bug1235	\
	bug1237	\
	bug1242	\
	bug1250	\
	bug1252	\
	bug1253	\
	bug1260	\
	bug1261	\
	bug1263	\
	bug1265	\
	bug1266	\
	bug1268	\
	bug1269	\
	bug1270	\
	bug1272	\
	bug1275	\
	bug1277	\
	bug1278	\
	bug1279	\
	bug1280	\
	bug1281	\
	bug1285	\
	bug1286	\
	bug1287	\
	bug1290	\
	bug1295	\
	bug1301	\
	bug1302	\
	bug1303	\
	bug1307	\
	bug1310	\
	bug1311	\
	bug1313	\
	bug1314	\
	bug1315	\
	bug1316	\
	bug1317	\
	bug1318	\
	bug1319	\
	bug1324	\
	bug1325	\
	bug1327	\
	bug1328	\
	bug1331	\
	bug1338	\
	bug1339	\
	bug	\
	builtin0	\
	builtin1	\
	cascade0	\
	cascade1	\
	cascade2	\
	cascade3	\
	cascade4	\
	catdef0	\
	catdef1	\
	catdef3	\
	closure0	\
	closure1	\
	collect0	\
	collect1	\
	condapply1	\
	condapply2	\
	const0	\
	const1	\
	const2	\
	const3	\
	const4	\
	const5	\
	cycle0	\
	db	\
	ddata	\
	defarg0	\
	defarg1	\
	defarg2	\
	defarg4	\
	defarg6	\
	defarg7	\
	defarg8	\
	defarg9	\
	defarg10	\
	default0	\
	default1	\
	default2	\
	default3	\
	default4	\
	default5	\
	default6	\
	default7	\
	default8	\
	default9	\
	defgroup0	\
	defgroup1	\
	defgroup2	\
	defgroup3	\
	depend0	\
	depend1	\
	depend2	\
	depend3	\
	depend4	\
	depend5	\
	depend6	\
	depend7	\
	depend8	\
	depend9	\
	df1	\
	dnames	\
	doc0	\
	domain0	\
	domain1	\
	domain2	\
	domain3	\
	embed1	\
	embed	\
	emerge0	\
	enum0	\
	enum1	\
	exit0	\
	exit2	\
	exn1	\
	exn2	\
	exn3	\
	export1	\
	export2	\
	export3	\
	extend0	\
	extend1	\
	f11	\
	fact	\
	fix0	\
	float0	\
	float1	\
	float3	\
	float4	\
	flow0	\
	fluid0	\
	for0	\
	format1	\
	format2	\
	forn0	\
	forn1	\
	forn8	\
	funct1	\
	funct2	\
	funct7	\
	funlist1	\
	funvar	\
	gc0	\
	genops	\
	gfGener1	\
	gfGener2	\
	goto0	\
	grok	\
	halt1	\
	has1	\
	has2	\
	hash0	\
	hide0	\
	hilbert	\
	if0	\
	if2	\
	if4	\
	if5	\
	ifcross0	\
	imod0	\
	impl	\
	inline0	\
	inline1	\
	inline2	\
	inline3	\
	inline4	\
	inline5	\
	intbug1	\
	ladder0	\
	libdup0	\
	libdup1	\
	limits	\
	lit0	\
	lit1	\
	loop0	\
	loop1	\
	loop2	\
	loop3	\
	macex1	\
	mandel	\
	mandel_t	\
	missing1	\
	mylist	\
	none0	\
	none1	\
	none2	\
	numeral0	\
	numeral1	\
	numeral2	\
	object0	\
	object1	\
	opt0	\
	opt2	\
	opt3	\
	oslowtst	\
	ovload0	\
	ovload1	\
	ovload2	\
	pack0	\
	pack3	\
	parse0	\
	pretend1	\
	qimport	\
	qual0	\
	qual1	\
	qual2	\
	ratio0	\
	rawrec1	\
	rawrec2	\
	rawrec3	\
	rawrec4	\
	reclist1	\
	record0	\
	record1	\
	record2	\
	record	\
	scan5	\
	scan6	\
	scobind0	\
	scobind2	\
	scobind4	\
	scobind6	\
	scope0	\
	scope1	\
	scope2	\
	scope3	\
	scope7	\
	scope8	\
	scope9	\
	scope10	\
	scope11	\
	segment0	\
	select0	\
	select1	\
	select2	\
	self0	\
	setBANG	\
	slist	\
	string_t	\
	swap1	\
	swap	\
	t715	\
	t897	\
	t944	\
	t950	\
	t958	\
	t966	\
	t973	\
	t986	\
	t1009	\
	t1024	\
	t1025	\
	t1028	\
	t1029	\
	t1053	\
	t1059	\
	t1064	\
	t1070a	\
	t1075a	\
	t1075b	\
	t1085	\
	t1093	\
	t1099	\
	t1105	\
	t1106	\
	t1107a	\
	t1145	\
	t1149	\
	t1157s	\
	t1157m	\
	t1166	\
	table1	\
	test0	\
	test1	\
	tinfer0	\
	tinfer1	\
	tinfer2	\
	tree1	\
	tree2	\
	tree	\
	triv0	\
	triv1	\
	triv3	\
	triv4	\
	triv5	\
	triv6	\
	try0	\
	tuple0	\
	tuple1	\
	tuple2	\
	tuple3	\
	tuple4	\
	type0	\
	type1	\
	type2	\
	type4	\
	type5	\
	type7	\
	type8	\
	union0	\
	union1	\
	union2	\
	where0	\
	where1	\
	where3	\
	#

BROKEN =	\
	bug1125	\
	bug1190	\
	bug1248 \
	fix1	\
	opt1	\
	pack1	\
	pack2	\
	t1088	\
	bug1054	\
	#

XFAIL_TESTS =	\
	bug892/bug892	\
	bug911/bug911	\
	bug928/bug928	\
	bug944/bug944	\
	bug965/bug965	\
	bug1020/bug1020	\
	bug1023/bug1023	\
	bug1054/bug1054	\
	bug1071/bug1071 \
	bug1087/bug1087	\
	bug1113/bug1113	\
	bug1114/bug1114	\
	bug1176/bug1176	\
	bug1220/bug1220 \
	bug1248/bug1248 \
	bug1252/bug1252 \
	bug1290/bug1290 \
	depend8/depend8 \
	default8/default8	\
	depend1/depend1	\
	funlist1/funlist1	\
	object1/object1	\
	pack1/pack1	\
	pack2/pack2	\
	#

RESOLVED = \
	bug814

include ../../testprog.am

pack0_pack0_SOURCES += pack0/packfns.c
t1075b_t1075b_SOURCES += t1075a/t1075a.c
t1157m_t1157m_SOURCES += t1157s/t1157s.c

t1075b/t1075b.c: t1075a/t1075a.c
t1157m/t1157m.c: t1157s/t1157s.c
numeral1/numeral1.c: numeral0/numeral0.c
numeral2/numeral2.c: numeral0/numeral0.c
numeral2/numeral2.c: numeral1/numeral1.c
