libraries = ax0

AXLTESTS =	\
	axlist0	\
	coerce1	\
	coerce2	\
	coerce3	\
	coerce4	\
	coerce5	\
	convert0	\
	hilbert0	\
	intcat0	\
	intcat1	\
	matops	\
	segext5	\
	segext6	\
	segext7	\
	supcat2	\
	supcat3	\
	t619	\
	vector0	\
	vector1	\
	vector2	\
	#

BROKEN =	\
	intfact	\
	#

XFAIL_TESTS =	\
	bug1089/bug1089	\
	type6/type6	\
	#

check_PROGRAMS = # filled by Tests.am
CLEANFILES = # filled by Tests.am
TESTS = $(check_PROGRAMS)

include ../../testprog.am
